fixed scroll on mobile.

--- a/css/main-moeloli.ml.css
+++ b/css/main-moeloli.ml.css
@@ -209,7 +209,17 @@ html, body {
     }
 
     .modal-footer {
+        right: 0;
+        bottom: 0;
+        width: 100%;
         height: 24px;
+        position: absolute;
+    }
+}
+
+@media (max-height: 360px) {
+    .modal-body {
+        height: 62%;
     }
 }
 
